[package]
name = "color-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
eframe = "0.27.2"
env_logger = { version = "0.11.3", default-features = false }
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.4"
strum = { version = "0.26.2", features = ["derive"] }
