[package]
name = "color-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.27"
env_logger = { version = "0.11", default-features = false }
lazy_static = "1.4"
log = "0.4"
regex = "1"
strum = { version = "0.26", features = ["derive"] }
